[package]
authors = ["Martin Junghanns <nerfaktor42@mailbox.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "Graph Definition Language"
keywords = ["property graph", "cypher", "parser", "nom"]
name = "gdl"
repository = "https://github.com/s1ck/nom-gdl"
version = "0.1.0"

[dependencies]
nom = "6"
thiserror = "1.0.24"

[dev-dependencies]
test-case = "1.1.0"
pretty_assertions = "0.6"
