[package]
authors = ["Martin Junghanns <nerfaktor42@mailbox.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "Graph Definition Language"
keywords = ["graph", "cypher", "parser", "nom"]
name = "gdl"
repository = "https://github.com/s1ck/nom-gdl"
version = "0.2.5"

[dependencies]
nom = "7.1"
thiserror = "1.0"

[dev-dependencies]
doc-comment = "0.3"
test-case = "2.2"
pretty_assertions = "1.3"
